Install express package

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "chat-backend"
   },
   "author": "Maximiliano Diaz",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
