--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "chat-backend",
   "version": "1.0.0",
   "description": "Chat app express backend",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.js"
+    "serve": "nodemon index.ts"
   },
   "repository": {
     "type": "git",
@@ -15,10 +14,17 @@
   "author": "Maximiliano Diaz",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.0",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.4.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
